--- a/UnrealEnginePython.uplugin
+++ b/UnrealEnginePython.uplugin
@@ -40,6 +40,10 @@
     {
       "Name": "LevelSequenceEditor",
       "Enabled": true
+    },
+    {
+      "Name": "USDImporter",
+      "Enabled": true
     }
   ]
 }
